# aieffect

./: .bandit  .gitignore  .pylintrc  ANALYSIS_TOOLS.md  FUNCTION_LENGTH_REPORT.md  Makefile  QUICKSTART.md  README.md  USAGE.md  deploy.sh  err.md  pyproject.toml  run_analysis.sh
.github/workflows/: ci.yml  regression.yml
analysis_reports/: bandit_report.txt  mypy_report.txt  pylint_report.txt  radon_cc_report.txt  radon_mi_report.txt
cicd/jenkins/: Jenkinsfile  README.md  plugins.txt
cicd/scripts/: setup_jenkins_agent.sh
configs/: default.yml  log_rules.yml
configs/environments/: ci.yml
data/: cases.yml
demos/: conftest.py  demo_a_local_cli.py  demo_a_local_cli.sh  demo_b_web_api.py  demo_b_web_api.sh  scenarios.yml  test_demo_scenarios.py
deploy/: gunicorn.conf.py  supervisord.conf
docs/: dict_return_solutions.md
framework/: __init__.py  cli.py
framework/cli/: __init__.py  build.py  cases.py  cmd_build.py  cmd_cases.py  cmd_deps.py  cmd_env.py  cmd_misc.py  cmd_repo.py  cmd_result.py  cmd_run.py  cmd_stimulus.py  core.py  deps.py  env.py  history_cmd.py  orchestrate.py  repo.py  result.py  snapshot.py  stimulus.py
framework/core/: case_manager.py  collector.py  config.py  dep_manager.py  exceptions.py  history.py  log_checker.py  models.py  pipeline.py  protocols.py  registry.py  reporter.py  resource.py  result_models.py  runner.py  scheduler.py  snapshot.py  storage.py
framework/plugins/: __init__.py
framework/services/: build_service.py  case_service.py  container.py  env_service.py  execution_orchestrator.py  repo_service.py  result_service.py  run_service.py  stimulus_service.py
framework/utils/: net.py  (+3 more)
scripts/: apply_deps.py  gen_report.py  run_regression.py
testdata/: registry.yml
tests/: test_build_service.py  test_collector.py  test_env_service.py  test_orchestrator.py  test_reporter.py  test_resource.py  test_result_service.py  test_runner.py  test_snapshot.py  test_stimulus_service.py
(+69 files in other folders)
